# roxy

./: .clang-format  .gitignore  CMakeLists.txt
cmake/: CPM.cmake
compiler/: main.cpp
compiler/ir/: block.hpp  component.cpp  component.hpp  pack_info.cpp  pack_info.hpp
compiler/lua/: debug.cpp  debug.hpp  element_component_binder.cpp  element_component_binder.hpp  element_engine.cpp  element_engine.hpp  error.hpp  util.cpp  util.hpp
compiler/lua/element/: block_element.cpp  block_element.hpp  component.cpp  component.hpp
compiler/repr/: block.cpp  block.hpp  component_base.hpp  component_registry.cpp  component_registry.hpp  pack_repr.cpp  pack_repr.hpp  texture_tracker.cpp  texture_tracker.hpp  util.hpp
compiler/repr/block_components/: basic_components.hpp  complex_components.hpp
compiler/util/: identifier.cpp  identifier.hpp  stream.cpp  stream.hpp  type.hpp
cpm-cache/lua/: 6eb2.hash  8f90.hash  e886.hash
cpm-cache/reflect-cpp/: e046.hash
cpm-cache/sol2/: d726.hash
example/: lamp.lua
lua/: api.lua
